Fix logo height and remove extra paddings

--- a/01-comming-soon/css/styles.css
+++ b/01-comming-soon/css/styles.css
@@ -106,14 +106,14 @@ b.light-color{ color: #444; }
 
 .left-section{ float: left; width: 50%; position: relative; }
 
-.left-section .logo{ position: absolute; top: 40px; height: 160px; }
+.left-section .logo{ position: absolute; top: 40px; height: 120px; }
 
 .left-section .logo img{ height: 100%; width: auto; } 
 
 
-.left-section .main-content{ padding: 40px 40px 40px 0; }
+.left-section .main-content{ padding: 120px 40px 40px 0; }
 
-.main-content .title{ margin-bottom: 15px; }
+.main-content .title{ margin-bottom: 10px; }
 
 .main-content .email-input-area{ margin: 40px 0 20px; position: relative; width: 400px; height: 47px; }
 
